@@ -1,5 +1,6 @@
 New in version 0.98.4 (??? 2009)
  * Fix build break in optional OWL-format output.
+ * Delete obsolete interface class RelexInfo.
 
 New in version 0.98.3 (February 2009)
  * Fix bug, where the OpenNLP doc splitter was not being found.
